- bump to Paper 26.2